[package]
name = "bms"
version = "0.1.0"
edition = "2021"
authors = ["Avii <bms-rs@avii.nl>"]
repository = "https://github.com/aviinl/bms-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
windows = { version = "0.54", features = ["Win32_System_Memory"] }
